--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="addBody">Add To Body</string>
     <string name="key">Key</string>
     <string name="value">Value</string>
+    <string name="history">History</string>
+    <string name="addHeader">Add Header</string>
 </resources>
